--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Plugin/CakePtbr"]
 	path = Plugin/CakePtbr
 	url = https://github.com/jrbasso/cake_ptbr.git
+[submodule "Plugin/DebugKit"]
+	path = Plugin/DebugKit
+	url = https://github.com/cakephp/debug_kit.git
